--- a/functions/package.json
+++ b/functions/package.json
@@ -11,8 +11,10 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@types/node-fetch": "^2.1.7",
     "firebase-admin": "~7.0.0",
-    "firebase-functions": "^2.2.0"
+    "firebase-functions": "^2.2.0",
+    "node-fetch": "^2.3.0"
   },
   "devDependencies": {
     "tslint": "^5.12.0",
