--- a/functions/package.json
+++ b/functions/package.json
@@ -2,7 +2,7 @@
   "name": "functions",
   "scripts": {
     "lint": "tslint --project tsconfig.json",
-    "build": "tsc",
+    "build": "cp -R src/emails lib/emails && tsc",
     "serve": "yarn build && firebase serve --only functions",
     "shell": "yarn build && firebase functions:shell",
     "start": "yarn shell",
@@ -11,12 +11,13 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "@types/node-fetch": "^2.1.7",
     "firebase-admin": "~7.0.0",
     "firebase-functions": "^2.2.0",
     "node-fetch": "^2.3.0"
   },
   "devDependencies": {
+    "@types/node": "^11.13.4",
+    "@types/node-fetch": "^2.3.2",
     "tslint": "^5.12.0",
     "typescript": "^3.2.2"
   },
